objects/ChatSuggestion__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Chat Suggestion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Keyword__c</columns>
        <columns>Response__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Suggestions</fullName>
        <columns>NAME</columns>
        <columns>Keyword__c</columns>
        <columns>Response__c</columns>
        <filterScope>Mine</filterScope>
        <label>All Suggestions</label>
    </listViews>
    <nameField>
        <displayFormat>CQ-{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Suggestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>